# nrprotocol

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: hello_ssh.py  multi_node.py
sdk/python/nrp/: __init__.py  driver.py  events.py  identity.py  manifest.py
spec/: EVENTS.md  IDENTITY.md  MANIFEST.md  NRP_SPEC.md
